--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,8 @@
 spring:
-  security:
-    user:
-      name: julius
-      password: secret
+# datasource:
+#   url: jdbc:postgresql:envers
+#   url: jdbc:mysql://localhost/envers?useSSL=false
+  jpa:
+    show-sql: true
+    properties:
+      hibernate.temp.use_jdbc_metadata_defaults: false
